--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "heroku": "^8.1.9",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
-    "nodemon": "^3.0.1",
-    "vercel": "^31.2.0"
+    "nodemon": "^3.0.1"
   }
 }
